--- a/gavel-contest/public/index.html
+++ b/gavel-contest/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Gavel-Contest</title>
     <link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
     <div id="app"></div>
