Changed gavel-contest-server port to resolve conflict on the dev server. Added dependency needed for dev server. Trying to fix firebaseui.css for production.

--- a/gavel-contest/public/index.html
+++ b/gavel-contest/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Gavel-Contest</title>
-    <link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />
+    <!--<link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />-->
+    <link type="text/css" rel="stylesheet" >
   </head>
   <body>
     <div id="app"></div>
