Updated email verification css

--- a/gavel-contest/public/index.html
+++ b/gavel-contest/public/index.html
@@ -6,7 +6,7 @@
     <!--<link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />-->
     <link type="text/css" rel="stylesheet" >
   </head>
-  <body>
+  <body style="background-color: #EEEEEE;">
     <div id="app"></div>
   </body>
 </html>
